build(desktop): reduce portable distribution size